--- a/Models/-VC/2025.06.10_Pureformer-VC.md
+++ b/Models/-VC/2025.06.10_Pureformer-VC.md
@@ -319,4 +319,18 @@ Additionally, $d$ indicates the output dimension for each weight, and $wn$ refer
 
 The stylized attention output is connected residually.
 
+### Speaker Encoder with AAM-Softmax Loss
+
+The speaker encoder is designed to extract timbre representations from mel-spectrograms, allowing the model to capture speaker-specific features that are critical for VC.
+
+For its backbone, we use a structure made up of several Conformer blocks from MFA-Conformer[^Zhang2022Mfa-Conformer].
+
+Importantly, these Conformer blocks are configured **without the IN functions** to ensure the preservation of speaker-related information.
+
+To further enhance the quality of the extracted embeddings, we incorporate the Additive Angular Margin Softmax (AAM-softmax) layer.
+
+This parameterized loss function optimizes the learning of compact and well-separated clusters in the embedding space for different speakers.
+
+By introducing a fixed angular margin between classes, the AAM-softmax layer encourages the encoder to produce discriminative and robust embeddings, thus improving the overall performance of speaker representation in the VC process.
+
 #
