--- a/Models/-VC/2025.06.10_Pureformer-VC.md
+++ b/Models/-VC/2025.06.10_Pureformer-VC.md
@@ -380,4 +380,42 @@ y_{2} = G_{vc}(x_{anc},x_{pos})
 \end{aligned}
 $$
 
+### Training Objective
+
+The training objective of the Pureformer-VC model includes VAE loss, AAM-softmax loss, and triplet loss.
+
+The total VAE loss is based on two outputs $y_{1},y_{2}$ as shown in Figure [fig:2](#fig:2) and can be denoted as:
+
+$$
+\begin{aligned}
+
+L_{t-vae} = \lambda_{1}(L_{vae}(x_{anc},y_{1}) + \lambda_{2}L_{vae}(x_{anc},y_{2}))
+
+\end{aligned}
+$$
+
+The AAM-softmax loss can be computed using the three true labels of samples $C$ and the predictions of the speaker encoder:
+
+$$
+
+L_{t-aam} = \sum_{c_{i}\in C}
+
+L_{aam}(c_{i},x_{i})
+
+$$
+
+Finally, the triplet loss helps the speaker encoder to distinguish the embeddings.
+
+The total training objective is as follows:
+
+$$
+
+L_{total} = L_{t-vae} + \lambda_{3}L_{t-aam} + \lambda_{4}L_{tri} 
+
+$$
+
+![](figs/tripletloss.pdf)
+
+<a id='fig:2'>The illustration of training objective.</a>
+
 #
