--- a/Models/-VC/2025.06.10_Pureformer-VC.md
+++ b/Models/-VC/2025.06.10_Pureformer-VC.md
@@ -418,4 +418,9 @@ $$
 
 <a id='fig:2'>The illustration of training objective.</a>
 
-#
+### Vocoder
+
+The vocoder has the same structure as the HiFi-GAN generator.
+
+In our study, it was pre-trained on the same dataset used for the VC training.
+
