--- a/Models/-VC/2025.06.10_Pureformer-VC.md
+++ b/Models/-VC/2025.06.10_Pureformer-VC.md
@@ -474,4 +474,41 @@ The experiments are conducted in a many-to-many, one-shot (any-to-any) setup.
 
 We further evaluate the performance of the proposed model in cross-lingual VC, where the source utterance's language differs from that of the target language.
 
+### Metrics and Evaluation
+
+We assess the naturalness and intelligibility of the generated speech using subjective metrics, such as the Mean Opinion Score (MOS).
+
+Additionally, we utilize objective metrics to evaluate timbre similarity with the target speech, including the Voice Similarity Score (VSS) and Mel-Cepstral Distortion (MCD).
+
+Higher scores indicate greater effectiveness of the voice conversion (VC) system. 
+
+**Mean Opinion Score (MOS)**.
+
+The Mean Opinion Score (MOS) is a widely used metric for assessing the subjective quality of speech or audio.
+
+It is based on ratings from human listeners, who are asked to evaluate the quality of speech samples using a scale that typically ranges from 1 to 5.
+
+A higher MOS signifies better reconstruction quality.
+
+**Voice similarity score (VSS)**.
+
+The Voice Similarity Score (VSS) is an objective metric that quantifies the degree of resemblance between generated speech and authentic or target speech in terms of timbre, tone, and voice quality.
+
+VSS is calculated based on embedding similarity derived from a pre-trained speaker verification model (Resemblyzer)
+[^Desplanques2020Ecapa-TDNN].
+
+Higher scores represent greater similarity, indicating improved voice conversion (VC) performance.  
+
+**Mel-cepstral distortion (MCD)**.
+
+The MCD is an objective quantitative measure that evaluates the Mel-cepstral divergence between the source and generated utterances.
+
+The lower the MCD, the better the reconstruction effect.
+
+During the testing phase, both many-to-many and one-shot (any-to-any) VC are conducted using non-parallel data.
+
+For evaluation, 10 source/target speech pairs are fed into each VC model under two scenarios.
+
+After this, 5 participants are invited to rate the speech samples.
+
 #
